--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,66 @@
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+.grid{
+  max-width: 1200px;
+}
+
+.grid:after{
+content: '';
+display: block;
+clear: both;
+}
+
+/* .grid-sizer .grid-item {
+width: 50%;
+} */
+
 .grid-item {
-  width: 200px;
+float: left;
+width: 160px;
+height: 120px;
+border: 2px solid hsla(0, 0%, 0%, 0.5); */
 }
 
 .grid-item--width2 {
-  width: 400px;
+width: 160px;
+}
+
+.grid-item--width3{
+  width: 480px;
+}
+
+.grid-item--width4{
+  width: 640px;
+}
+
+.grid-item--height2{
+height: 200px;
+}
+
+.grid-item--height3{
+  height: 260px;
+}
+
+.grid-item--height4{
+  height: 360px;
+}
+
+.grid-item--gigante{
+  width: 320px;
+  height: 360px;
+}
+
+/* .grid-item img{
+  display: block;
+  max-width: 100%;
+} */
+
+.grid-item:hover {
+  background: #A2C;
+  border-color: white;
+  cursor: pointer;
 }
